Added HISTORY doc

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+0.2 (2012-01-19)
+----------------
+
+* Updated testing and bootstrapping.
+
+
 0.2a1 (2011-07-19)
 ------------------
 
